Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjBooleanRetTextFail.quorum
class Main
    action Main
        boolean one = true
        Boolean two
        two:SetValue(true)
        Yoda<boolean, Boolean, text> yoda
        boolean wrongRet = yoda(one, two)
     end
end
